--- a/src/milligramstyle.css
+++ b/src/milligramstyle.css
@@ -57,8 +57,8 @@ body {
   }
   
   .column {
-    text-align: center;
-    margin: 2rem auto;
+    text-align: left;
+    margin: 2rem 3rem;
     color:#fff;
   }
   
